removed previous NEAT NN, started integration on new NN